# fuel-route-optimizer

./: .env.example  README.md  add_coordinates.py  fuel-prices-with-coordinates.csv  pyproject.toml
src/fuel_route/config/: settings.py  urls.py
src/fuel_route/fuel_optimizer/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
src/fuel_route/fuel_optimizer/management/commands/: import_fuel_stations.py
src/fuel_route/fuel_optimizer/migrations/: 0001_initial.py
